# Supervised_dMRI_fitting

./: README.md  pyproject.toml
Supervised_RNS_dMRI/: run.py
Supervised_RNS_dMRI/config/: snakebids.yml
Supervised_RNS_dMRI/workflow/: Snakefile
Supervised_RNS_dMRI/workflow/rules/: analyze_all_datasets.smk  process_all_datasets.smk  train_machine_learning_model.smk
Supervised_RNS_dMRI/workflow/scripts/: apply_MLP_python.py  apply_RF_python.py  build_training_set.py
Supervised_dMRI_fitting/: run.py
Supervised_dMRI_fitting/workflow/scripts/: prepare_data_and_noisemaps.py  run_model_fitting.py  setup_and_run_model_training.py  train_MLP_python.py  train_RF_python.py
